--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,17 @@ dependencies:
   permission_handler: ^9.2.0
   share: ^2.0.4
   file_picker: ^4.5.1
-
+  csv:
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+  injectable: ^1.5.3
+  get_it: ^7.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.1.10
+  injectable_generator: ^1.5.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
