--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.4
   sqflite: ^2.0.2+1
   intl: ^0.17.0
-  flutter_screenutil: ^5.3.1
-  flutter_rating_bar: ^4.0.0
-  path_provider: ^2.0.9
+  flutter_screenutil: ^5.5.3+1
+  flutter_rating_bar: ^4.0.1
+  path_provider: ^2.0.10
   permission_handler: ^9.2.0
   share: ^2.0.4
   file_picker: ^4.5.1
@@ -51,14 +51,19 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.10
+  build_runner: ^2.1.11
   injectable_generator: ^1.5.3
+  bloc_test: ^9.0.3
+  mockito: ^5.2.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.4
+
+dependency_overrides:
+  analyzer: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
